--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -5,13 +5,9 @@ include: package:very_good_analysis/analysis_options.yaml
 
 linter:
   rules:
-    public_member_api_docs: false
     omit_local_variable_types: false
-    type_annotate_public_apis: false
+    type_annotate_public_apis: true
 
 analyzer:
   exclude:
     - 'lib/**/*.g.dart'
-  
-  errors:
-    invalid_annotation_target: ignore
