--- a/example/analysis_options.yaml
+++ b/example/analysis_options.yaml
@@ -24,6 +24,7 @@ linter:
     avoid_print: false
     public_member_api_docs: false
     omit_local_variable_types: false
+    unnecessary_lambdas: false
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
