--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_riverpod: ^2.3.10
   path_provider: ^2.1.0
   whisper_flutter_plus:
     path: ../
